test/spec_vectors/memory/fail/module_28.wat
(module (memory 0 4294967296))